# HackerOS-Nix-Manager

./: README.md  build.hl  install-nix.hl  version.hacker
source-code/: Cargo.toml
source-code/src/: cli.rs  config.rs  main.rs  nix.rs  output.rs  pkgdb.rs  progress.rs  state.rs
source-code/src/commands/: check.rs  clean.rs  doctor.rs  env.rs  gc.rs  info.rs  install.rs  list.rs  mod.rs  pin.rs  remove.rs  rollback.rs  search.rs  unpack.rs  unpin.rs  update.rs  upgrade.rs  which.rs
