[package]
name = "hnm"
version = "0.1.0"
edition = "2021"
authors = ["HackerOS Team <hackeros068@gmail.com>"]
description = "HackerOS Nix Manager — lightweight Nix package manager for HackerOS"
license = "Apache-2.0"

[[bin]]
name = "hnm"
path = "src/main.rs"

[dependencies]
lexopt       = "0.3"
owo-colors   = { version = "4", features = ["supports-colors"] }
indicatif    = "0.17"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"
anyhow       = "1"
chrono       = { version = "0.4", features = ["serde"] }
dirs         = "5"
libc         = "0.2"
reqwest      = { version = "0.11", features = ["blocking"], optional = true }
